Closed Bug 191916 Opened 22 years ago Closed 22 years ago

Unable to use SOAP / WSDL in recent builds

Categories

(Core :: DOM: Events, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla1.3beta

People

(Reporter: harishd, Assigned: jst)

References

()

Details

(Keywords: regression, topembed, Whiteboard: [HAVE FIX])

Attachments

(1 file, 1 obsolete file)

The above URL worked fine a week ago, however, with recent builds I hit the error "Name isn't in hash." in nsDOMClassInfo.cpp.
Attached patch Updated patch.Splinter Review
This makes us create a real constructor even for external constructor classes, and it makes the DOMJSClass_Construct() hook deal with those too.
Attachment #113526 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Flags: blocking1.3b?
Flags: blocking1.3?
Keywords: regression
OS: Windows XP → All
Priority: -- → P1
Hardware: PC → All
Whiteboard: [HAVE FIX]
Target Milestone: --- → mozilla1.3beta
This makes our SOAP code unusable, that is IMO reason enough to take this for 1.3b.
Attachment #113529 - Flags: superreview?(peterv)
Attachment #113529 - Flags: review?(bugmail)
Attachment #113529 - Flags: approval1.3b?
Keywords: topembed
Comment on attachment 113529 [details] [diff] [review] Updated patch. r=sicking
Attachment #113529 - Flags: review?(bugmail) → review+
Attachment #113529 - Flags: superreview?(peterv) → superreview+
Blocks: 191996
Comment on attachment 113529 [details] [diff] [review] Updated patch. a=asa (on behalf of drivers) for checkin to 1.3beta.
Attachment #113529 - Flags: approval1.3b? → approval1.3b+
FIXED.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Flags: blocking1.3b?
Flags: blocking1.3?
verifying build 2003-02-12-08-trunk
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: