Fixing regression bug 191916. Making classes of eTypeExternalConstructor constructable again, we can't use the DOMJSClass_Construct() hook directly from a JS function, it must be used only as a construct hook on instances of the JS class nsDOMClassInfo::sDOMJSClass. r=bugmail@sicking.cc, sr=peterv@netscape.com, a=asa@mozilla.org